public/front/style.css
/* ... */
.cart-concern .cart-button button i.icon {
  font-size: 15px;
}

.product-item .wishlist-btn i.icon.icon-heart {
  font-size: 20px;
}

.product-item .item-price {
  font-size: 1.8em;
}




/*--------------------------------------------------------------
  course detail page style
  --------------------------------------------------------------*/
.nav-tabs .nav-item {
  transition: all 0.1s ease-in;
  border-radius: 0px;
}

.nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link.active {
  color: var(--bs-primary);
  background-color: transparent;
  border-color: transparent;
  border-bottom: 4px solid var(--bs-primary);
  transition: all 0.1s ease-in;
}

.nav-tabs .nav-link:focus,
.nav-tabs .nav-link:hover {
  color: var(--bs-primary);
  isolation: isolate;
  border-color: transparent;
  border-bottom: 4px solid var(--bs-primary);
  transition: all 0.1s ease-in;
}

/*---- video section style start ----*/

/* color box style */
div#cboxOverlay {
  opacity: 0.8 !important;
}

.video .video-player {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

iconify-icon.video-icon {
  font-size: 30px;
  color: var(--bs-light);
  border-radius: 6.25rem;
  background: rgba(255, 255, 255, 0.35);
  transition: all 0.4s ease-in-out;
}

iconify-icon.video-icon:hover {
  font-size: 35px;
}
/*---------------------------------------------
Sullybus--------------------------------------*/
/* .max-h-19 {
  max-height: 1.1875rem!important
}

.min-h-19 {
  min-height: 1.1875rem!important;
}
.max-w-19 {
  max-width: 35px;
}

.min-w-19 {
  min-width: 35px; 
}*/
.detel{
  border-radius: 10px;
}
.sullybus-btn{
 border-radius: 50%;
 align-content: center;
  width: 20px;
  height: 20px;
}
.star-list li {
  list-style:disc;
}
/*---------------------------------------------
tool-----------------------------------------*/
tool {
  align-items: center;
  background: #E3E3E3;
  display: flex;
  height: 100vh;
  justify-content: center;
}

/* Styles for the client logo slider container */
.slider-container {
  width: auto; /* Adjusted to auto to fit the content */
  overflow: hidden;
  white-space: nowrap; /* Prevents the content from wrapping */
}

/* Styles for the logo slider */
.logo-slider {
  display: inline-flex;
  animation: slide 20s infinite linear; /* Adjusted animation duration */
  box-sizing: border-box; /* Ensures the box size includes padding and border */
  position: relative; /* Added relative positioning */
}

/* Animation keyframes for the logo slider */
@keyframes slide {
  0% {
    transform: translateX(0%);
  }
  100% {
    transform: translateX(calc(-100% + 200px)); /* Adjusted to account for logo width and prevent gaps */
  }
}

/* Styles for the client logo images */
.logo-image {
  width: 200px;
  height: 150px;
  object-fit: contain;
  margin: 10px;
}

#teachers {
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 100vh;
  background: url(images/bg.jpg) var(--bs-primary-bg-subtle)  no-repeat center;
}
.slider-wrapper {
    overflow: hidden;
    max-width: 1200px;
    margin: 0 auto 2px;
}

.card-list .card-item {
    height: auto;
    color: #fff;
    user-select: none;
    padding: 35px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border-radius: 10px;
    backdrop-filter: blur(30px);
    background: rgb(74 103 187 / 30%);
    border: 1px solid rgba(255, 255, 255, 0.5);
}

.card-list .card-item .user-image {
    width: 150px;
    height: 150px;
    border-radius: 50%;
    margin-bottom: 40px;
    border: 3px solid #fff;
    padding: 4px;
}

.card-list .card-item .user-profession {
    font-size: 1.15rem;
    color: #fff;
    font-weight: 500;
    margin: 14px 0 40px;
}

.card-list .card-item .message-button {
    font-size: 1.25rem;
    padding: 10px 35px;
    color: #030728;
    border-radius: 6px;
    font-weight: 500;
    cursor: pointer;
    background: #fff;
    border: 1px solid transparent;
    transition: 0.2s ease;
}

.card-list .card-item .message-button:hover {
    background: rgba(255, 255, 255, 0.1);
    border: 1px solid #fff;
    color: #fff;
}

.slider-wrapper .swiper-pagination-bullet {
    background: #fff;
    height: 13px;
    width: 13px;
    opacity: 0.5;
}

.slider-wrapper .swiper-pagination-bullet-active {
    opacity: 1;
}

.slider-wrapper .swiper-button-prev, 
.slider-wrapper .swiper-button-next {
    color: #fff;
    margin-top: -55px;
    transition: 0.2s ease;
}

.slider-wrapper .swiper-button-prev:hover, 
.slider-wrapper .swiper-button-next:hover {
    color: #4658ff;
}

@media (max-width: 768px) {
    .slider-wrapper {
        margin: 0 10px 40px;
    }

    .swiper-button-prev, 
    .swiper-button-next {
        display: none;
    }
}

